lib/sundials_4.0.2/src/cvode/F90/fcvode.f90

! ------------------------------------------------------------------
! Programmer(s): David J. Gardner @ LLNL
!                Daniel R. Reynolds @ SMU
! ------------------------------------------------------------------
! SUNDIALS Copyright Start
! Copyright (c) 2002-2019, Lawrence Livermore National Security
! and Southern Methodist University.
! All rights reserved.
!
! See the top-level LICENSE and NOTICE files for details.
!
! SPDX-License-Identifier: BSD-3-Clause
! SUNDIALS Copyright End
! ------------------------------------------------------------------
! This file contains a Fortran module for interfacing directly with
! CVODE using the ISO_C_BINDING module.
! ------------------------------------------------------------------

module fcvode_mod

  use, intrinsic :: iso_c_binding, only : c_int

  ! =================================================================
  !              C V O D E     C O N S T A N T S
  ! =================================================================

  ! -----------------------------------------------------------------
  ! Enumerations for inputs to CVodeCreate and CVode.
  ! -----------------------------------------------------------------

  ! lmm
  integer(c_int), parameter :: CV_ADAMS = 1
  integer(c_int), parameter :: CV_BDF   = 2

  ! itask
  integer(c_int), parameter :: CV_NORMAL   = 1
  integer(c_int), parameter :: CV_ONE_STEP = 2

  ! -----------------------------------------------------------------
  ! CVODE return flags
  ! -----------------------------------------------------------------

  integer(c_int), parameter :: CV_SUCCESS           =   0
  integer(c_int), parameter :: CV_TSTOP_RETURN      =   1
  integer(c_int), parameter :: CV_ROOT_RETURN       =   2

  integer(c_int), parameter :: CV_WARNING           =  99

  integer(c_int), parameter :: CV_TOO_MUCH_WORK     =  -1
  integer(c_int), parameter :: CV_TOO_MUCH_ACC      =  -2
  integer(c_int), parameter :: CV_ERR_FAILURE       =  -3
  integer(c_int), parameter :: CV_CONV_FAILURE      =  -4

  integer(c_int), parameter :: CV_LINIT_FAIL        =  -5
  integer(c_int), parameter :: CV_LSETUP_FAIL       =  -6
  integer(c_int), parameter :: CV_LSOLVE_FAIL       =  -7
  integer(c_int), parameter :: CV_RHSFUNC_FAIL      =  -8
  integer(c_int), parameter :: CV_FIRST_RHSFUNC_ERR =  -9
  integer(c_int), parameter :: CV_REPTD_RHSFUNC_ERR =  -10
  integer(c_int), parameter :: CV_UNREC_RHSFUNC_ERR =  -11
  integer(c_int), parameter :: CV_RTFUNC_FAIL       =  -12
  integer(c_int), parameter :: CV_NLS_INIT_FAIL     =  -13
  integer(c_int), parameter :: CV_NLS_SETUP_FAIL    =  -14
  integer(c_int), parameter :: CV_CONSTR_FAIL       =  -15

  integer(c_int), parameter :: CV_MEM_FAIL          =  -20
  integer(c_int), parameter :: CV_MEM_NULL          =  -21
  integer(c_int), parameter :: CV_ILL_INPUT         =  -22
  integer(c_int), parameter :: CV_NO_MALLOC         =  -23
  integer(c_int), parameter :: CV_BAD_K             =  -24
  integer(c_int), parameter :: CV_BAD_T             =  -25
  integer(c_int), parameter :: CV_BAD_DKY           =  -26
  integer(c_int), parameter :: CV_TOO_CLOSE         =  -27
  integer(c_int), parameter :: CV_VECTOROP_ERR      =  -28

  ! -----------------------------------------------------------------
  ! CVLS return values
  ! -----------------------------------------------------------------

  integer(c_int), parameter :: CVLS_SUCCESS         =  0
  integer(c_int), parameter :: CVLS_MEM_NULL        = -1
  integer(c_int), parameter :: CVLS_LMEM_NULL       = -2
  integer(c_int), parameter :: CVLS_ILL_INPUT       = -3
  integer(c_int), parameter :: CVLS_MEM_FAIL        = -4
  integer(c_int), parameter :: CVLS_PMEM_NULL       = -5
  integer(c_int), parameter :: CVLS_JACFUN_UNRECVR  = -6
  integer(c_int), parameter :: CVLS_JACFUNC_RECVR   = -7
  integer(c_int), parameter :: CVLS_SUNMAT_FAIL     = -8
  integer(c_int), parameter :: CVLS_SUNLS_FAIL      = -9

  ! -----------------------------------------------------------------
  ! CVDIAG return values
  ! -----------------------------------------------------------------

  integer(c_int), parameter :: CVDIAG_SUCCESS         =  0
  integer(c_int), parameter :: CVDIAG_MEM_NULL        = -1
  integer(c_int), parameter :: CVDIAG_LMEM_NULL       = -2
  integer(c_int), parameter :: CVDIAG_ILL_INPUT       = -3
  integer(c_int), parameter :: CVDIAG_MEM_FAIL        = -4

  ! Additional last_flag values
  integer(c_int), parameter :: CVDIAG_INV_FAIL        = -5
  integer(c_int), parameter :: CVDIAG_RHSFUNC_UNRECVR = -6
  integer(c_int), parameter :: CVDIAG_RHSFUNC_RECVR   = -7

  ! =================================================================
  !          U S E R - C A L L A B L E   R O U T I N E S
  ! =================================================================

  interface

     ! =================================================================
     ! Interfaces for cvode.h
     ! =================================================================

     ! -----------------------------------------------------------------
     ! CVodeCreate
     ! -----------------------------------------------------------------

     type(c_ptr) function FCVodeCreate(lmm) &
          bind(C,name='CVodeCreate')
       use, intrinsic :: iso_c_binding
       implicit none
       integer(c_int), value :: lmm
     end function FCVodeCreate

     ! -----------------------------------------------------------------
     ! Integrator optional input specification functions
     ! -----------------------------------------------------------------

     integer(c_int) function FCVodeSetErrHandlerFn(cvode_mem, ehfun, eh_data) &
          bind(C,name='CVodeSetErrHandlerFn')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       type(c_funptr), value :: ehfun
       type(c_ptr),    value :: eh_data
     end function FCVodeSetErrHandlerFn

     ! -----------------------------------------------------------------
     ! NOT INTERFACED: CVodeSetErrFile
     ! -----------------------------------------------------------------

     integer(c_int) function FCVodeSetUserData(cvode_mem, user_data) &
          bind(C,name='CVodeSetUserData')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       type(c_ptr), value :: user_data
     end function FCVodeSetUserData

     integer(c_int) function FCVodeSetMaxOrd(cvode_mem, maxord) &
          bind(C,name='CVodeSetMaxOrd')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       integer(c_int), value :: maxord
     end function FCVodeSetMaxOrd

     integer(c_int) function FCVodeSetMaxNumSteps(cvode_mem, mxsteps) &
          bind(C,name='CVodeSetMaxNumSteps')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),     value :: cvode_mem
       integer(c_long), value :: mxsteps
     end function FCVodeSetMaxNumSteps

     integer(c_int) function FCVodeSetMaxHnilWarns(cvode_mem, mxhnil) &
          bind(C,name='CVodeSetMaxHnilWarns')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       integer(c_int), value :: mxhnil
     end function FCVodeSetMaxHnilWarns

     integer(c_int) function FCVodeSetStabLimDet(cvode_mem, stldet) &
          bind(C,name='CVodeSetStabLimDet')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       integer(c_int), value :: stldet
     end function FCVodeSetStabLimDet

     integer(c_int) function FCVodeSetInitStep(cvode_mem, hin) &
          bind(C,name='CVodeSetInitStep')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       real(c_double), value :: hin
     end function FCVodeSetInitStep

     integer(c_int) function FCVodeSetMinStep(cvode_mem, hmin) &
          bind(C,name='CVodeSetMinStep')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       real(c_double), value :: hmin
     end function FCVodeSetMinStep

     integer(c_int) function FCVodeSetMaxStep(cvode_mem, hmax) &
          bind(C,name='CVodeSetMaxStep')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       real(c_double), value :: hmax
     end function FCVodeSetMaxStep

     integer(c_int) function FCVodeSetStopTime(cvode_mem, tstop) &
          bind(C,name='CVodeSetStopTime')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       real(c_double), value :: tstop
     end function FCVodeSetStopTime

     integer(c_int) function FCVodeSetMaxErrTestFails(cvode_mem, maxnef) &
          bind(C,name='CVodeSetMaxErrTestFails')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       integer(c_int), value :: maxnef
     end function FCVodeSetMaxErrTestFails

     integer(c_int) function FCVodeSetMaxNonlinIters(cvode_mem, maxcor) &
          bind(C,name='CVodeSetMaxNonlinIters')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       integer(c_int), value :: maxcor
     end function FCVodeSetMaxNonlinIters

     integer(c_int) function FCVodeSetMaxConvFails(cvode_mem, maxncf) &
          bind(C,name='CVodeSetMaxConvFails')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       integer(c_int), value :: maxncf
     end function FCVodeSetMaxConvFails

     integer(c_int) function FCVodeSetNonlinConvCoef(cvode_mem, nlscoef) &
          bind(C,name='CVodeSetNonlinConvCoef')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       real(c_double), value :: nlscoef
     end function FCVodeSetNonlinConvCoef

     integer(c_int) function FCVodeSetConstraints(cvode_mem, constraints) &
         bind(C,name='CVodeSetConstraints')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       type(c_ptr), value :: constraints
     end function FCVodeSetConstraints

     integer(c_int) function FCVodeSetIterType(cvode_mem, iter) &
          bind(C,name='CVodeSetIterType')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       real(c_double), value :: iter
     end function FCVodeSetIterType

     integer(c_int) function FCVodeSetRootDirection(cvode_mem, rootdir) &
          bind(C,name='CVodeSetRootDirection')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       real(c_double)     :: rootdir
     end function FCVodeSetRootDirection

     integer(c_int) function FCVodeSetNoInactiveRootWarn(cvode_mem) &
         bind(C,name='CVodeSetNoInactiveRootWarn')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
     end function FCVodeSetNoInactiveRootWarn

     integer(c_int) function FCVodeSetNonlinearSolver(cvode_mem, NLS) &
        bind(C,name='CVodeSetNonlinearSolver')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       type(c_ptr), value :: NLS
     end function FCVodeSetNonlinearSolver

     ! -----------------------------------------------------------------
     ! CVodeInit
     ! -----------------------------------------------------------------

     integer(c_int) function FCVodeInit(cvode_mem, f, t0, y0) &
          bind(C,name='CVodeInit')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       type(c_funptr), value :: f
       real(c_double), value :: t0
       type(c_ptr),    value :: y0
     end function FCVodeInit
